ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - http:
        paths:
        - path: /api
          backend:
            serviceName: backend
            servicePort: 8080
    - http:
        paths:
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
